# Vet-Auto-Segmentation

./: README.MD  download.py  pyproject.toml
data/: CT-Scan-1.dcm  CT-Scan-10.dcm  CT-Scan-100.dcm  CT-Scan-101.dcm  CT-Scan-102.dcm  CT-Scan-103.dcm  CT-Scan-104.dcm  CT-Scan-105.dcm  CT-Scan-106.dcm  CT-Scan-107.dcm  CT-Scan-108.dcm  CT-Scan-109.dcm  CT-Scan-11.dcm  CT-Scan-110.dcm  CT-Scan-111.dcm  CT-Scan-112.dcm  CT-Scan-113.dcm  CT-Scan-114.dcm  CT-Scan-115.dcm  CT-Scan-116.dcm  CT-Scan-117.dcm  CT-Scan-118.dcm  CT-Scan-119.dcm  CT-Scan-12.dcm  CT-Scan-120.dcm  CT-Scan-121.dcm  CT-Scan-123.dcm  CT-Scan-124.dcm  CT-Scan-125.dcm  CT-Scan-126.dcm  CT-Scan-127.dcm  CT-Scan-128.dcm  CT-Scan-129.dcm  CT-Scan-13.dcm  CT-Scan-130.dcm  CT-Scan-131.dcm  CT-Scan-132.dcm  CT-Scan-133.dcm  CT-Scan-134.dcm  CT-Scan-135.dcm  (+105 more)
